Fixed big top gap in displays that are 1024px wide.
--HG--
extra : convert_revision : svn%3A60972f9f-2242-074b-9109-3933092f38a4/trunk%40421

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -77,7 +77,6 @@ footer > * {
 
 #page_fb_like {
     display: block;
-    float: left;
     clear: left;
     margin-left: 1em;
 }
